# Fcatbot3

./: .gitignore  AGENTS.md  PluginHelp.md  README.md  main.py  pyproject.toml
src/fcatbot/: __init__.py  __main__.py  console.py
src/fcatbot/api/: __init__.py  client.py
src/fcatbot/connection/: __init__.py  websocket.py
src/fcatbot/core/: client.py
src/fcatbot/models/: entity.py  message.py
src/fcatbot/plugkit/: __init__.py
src/fcatbot/plugkit/protocol/: __init__.py  bus.py  data.py  event.py  exceptions.py  manager.py  plugin.py  service.py  state.py  storage.py
src/fcatbot/plugkit/runtime/: __init__.py  bus.py  decorators.py  lifecycle.py  loader.py  registry.py  resolver.py  watcher.py
src/fcatbot/rbac/: __init__.py  engine.py  manager.py
src/fcatbot/utils/: __init__.py  cmdparse.py  color.py  logformat.py  logger.py
tests/: conftest.py
tests/api/: test_client.py
tests/app/: test_bot.py  test_console.py  test_loader.py  test_plugin_dev.py  test_reload_exact.py
tests/connection/: test_ws_client.py
tests/rbac/: test_rbac.py
tests/utils/: test_utils.py
