[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Fcatbot"
version = "3.0.7"
authors = [{ name = "Fish-LP", email = "Fish.zh@outlook.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = ["pyyaml", "watchdog", "aiohttp", "pillow", "packaging"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
asyncio_mode = "auto"
